required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- WMS GetFeatureInfo: honour FEATURE_COUNT for any INFO_FORMAT and 
  apply the FEATURE_COUNT per layer instead of globally (#2423, #1686)

- enable soft outlines on truetype labels. This is triggered with a new 
  keyword OUTLINEWIDTH for the LABEL block (#2417) 

- fix clipping rectangle to take width as well as size into account (#2411)

- AGG: added and use a line and polygon adaptor to avoid copying shapeObj
  points to an agg path_storage. avoids a few mallocs and a few copies.

- fixed symbolsetObj not to set the SWIG immutable flag permanently
  don't expose refcount and the symbol attributes (Ticket #2407)

- fix for support of entity encoded text in angle follow text (#2403)

- AGG: initial support for native computation of label sizes (#2357)

- AGG: support text symbols specified by their character number (#2398)  

- AGG: fix angle orientation for various symbols

- allow scientific notation for attributes binded to an int (#2394)

- merge GD and AGG label cache drawing functions (#2390)

- Enable AGG rendering of bitmap font labels instead of falling back to
  GD (#2387)

- clean up treatment of encoding and wrap caracter

- Fix legend label placement for multiline labels (#2382)

- enforce WRAP parameter in legend label (#2382)

- AGG: pixel level simplification for line and polygon shapes (#2381)

- fixed blue/green color swapping for space delimited strings bound to an
  attribute. (bug 2378)

- don't remove points that are checked as being colinear (#2366)

- add initial(?) support for reading a pie chart's size from an attribute (#2136)
